# untitled-oasis

./: .gitignore  Cargo.toml  Makefile  pnpm-lock.yaml  pnpm-workspace.yaml
.cargo/: config.toml
.github/: CODE_OF_CONDUCT.md  changelog-config.json
.github/workflows/: rust.yml  solidity.yml
artifacts/unstable/: AtomicProxyFactory.json  IEmitter.json
components/contracts-bridge-example/: Makefile  hardhat.config.ts  package.json
components/contracts-bridge-example/contracts/: BridgeMessages.sol  BridgeOnRemote.sol  BridgeOnSapphire.sol  BridgeToken.sol  CommonEndpoint.sol  IBridgeToken.sol
components/contracts-messaging/: Makefile  package.json  tsconfig.json
components/contracts-messaging/contracts/: IEmitter.sol  MessageDecoderV1.sol  MessageEmitter.sol  MessageEmitterV1.sol  SignatureCollector.sol  ValidatorSet.sol
components/contracts-messaging/contracts/lib/: Errors.sol  IAllowedSigner.sol  MessageOrigin.sol  MessageOriginV1.sol  SequentialReceiver.sol  SignedMessage.sol
components/contracts-messaging/contracts/test/: TestAllowedSignature.sol  TestOrigin.sol
components/contracts-messaging/test/: collector.spec.ts  emitter.spec.ts  origin.spec.ts  utils.ts
components/contracts-proxy/: Makefile  package.json
components/contracts-proxy/contracts/: AtomicProxy.sol  AtomicProxyFactory.sol  IAtomicProxyFactory.sol  ICreateX.sol
components/contracts-proxy/contracts/test/: TestImpl1.sol  TestImpl2.sol
components/contracts-proxy/test/: factory.spec.ts
components/observer-app/: Cargo.toml
components/observer-app-mock/: Cargo.toml
components/observer-app-rofl/: Cargo.toml  rust-toolchain.toml
components/observer-app-rofl/src/: app.rs  lib.rs  main-localnet.rs  main-mainnet.rs  main-testnet.rs
components/observer-common/: Cargo.toml
components/observer-common/src/: contracts.rs  lib.rs  privatekey.rs  state.rs  utils.rs
components/observer-config/: Cargo.toml
components/observer-config/src/: lib.rs
components/rust/: Cargo.toml  Makefile
components/rust/observer-app/: Cargo.toml
components/rust/observer-app/src/: main-localnet.rs
components/rust/observer-common/: Cargo.toml
components/rust/observer-common/src/: contracts.rs  lib.rs  privatekey.rs  state.rs
components/rust/observer-config/: Cargo.toml
components/rust/observer-config/src/: lib.rs
components/rust/tool-mgmt/src/: main.rs
components/solidity/: Makefile
components/solidity/artifacts/unstable/: BridgeOnRemote.json  BridgeOnSapphire.json  BridgeToken.json  IAllowedSigner.json  MessageDecoderV1.json  MessageEmitterV1.json  README.md  SignatureCollector.json  ValidatorSet.json
components/solidity/contracts-bridge-example/: Makefile  package.json  tsconfig.json
components/solidity/contracts-bridge-example/contracts/: BridgeOnRemote.sol  BridgeToken.sol
components/solidity/contracts-messaging/: Makefile  hardhat.config.ts  package.json
components/solidity/contracts-messaging/contracts/: MessageEmitterV1.sol  ValidatorSet.sol
components/solidity/contracts-messaging/contracts/lib/: Errors.sol  SequentialReceiver.sol
components/solidity/contracts-messaging/contracts/test/: TestOrigin.sol  TestSignedMessage.sol
components/solidity/contracts-messaging/test/: emitter.spec.ts  origin.spec.ts  signedmessage.spec.ts  validator.spec.ts
components/solidity/contracts-proxy/: Makefile  README.md  hardhat.config.ts  tsconfig.json
components/solidity/contracts-proxy/contracts/: AtomicProxy.sol
components/tool-mgmt/: Cargo.toml
components/tool-mgmt/src/: main.rs
