[workspace]
resolver = "2"
members = [
    "components/observer-app-rofl",
    "components/observer-app-mock",
    "components/observer-common",
    "components/observer-config",
    "components/tool-mgmt",
]

[workspace.dependencies]
oasis-runtime-sdk = { git = "https://github.com/oasisprotocol/oasis-sdk", tag = "runtime-sdk/v0.9.6" }
alloy = { version = "0.9.2", features = ["network", "signer-mnemonic", "json-rpc", "providers", "sol-types", "json", "contract"] }
sgxs-tools = "0.8"

[workspace.lints.clippy]
indexing-slicing = "forbid"
unwrap_used = "warn"
expect_used = "warn"
panic = "warn"
