[workspace]
resolver = "2"
members = [
    "components/observer-app",
    "components/observer-common",
    "components/observer-config",
    "components/tool-mgmt",
]

[workspace.dependencies]
alloy = { version = "0.11.0", default-features = false }
tokio = { version = "1.43.0", default-features = true, features = ["rt-multi-thread"] }

[workspace.lints.clippy]
indexing-slicing = "forbid"
unwrap_used = "warn"
expect_used = "warn"
panic = "warn"
