[package]
name = "tool-mgmt"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.95"
clap = { version = "4.5.27", features = ["derive"] }
observer-common = { path = "../observer-common" }
observer-config = { path = "../observer-config" }
thiserror = "2.0.11"
tokio = { workspace = true }
alloy = { workspace = true, features = ["reqwest"] }

[[bin]]
name = "tool-mgmt"
path = "src/main.rs"

