[package]
name = "observer-app"
version = "0.1.0"
edition = "2021"

[dependencies]
observer-common = { path = "../observer-common" }

[features]
observer-localnet = ["observer-common/observer-localnet"]
observer-testnet = ["observer-common/observer-testnet"]
observer-mainnet = ["observer-common/observer-mainnet"]

[[bin]]
name = "observer-app-localnet"
path = "src/main-localnet.rs"
required-features = ["observer-localnet"]

[[bin]]
name = "observer-app-testnet"
path = "src/main-testnet.rs"
required-features = ["observer-testnet"]

[[bin]]
name = "observer-app-mainnet"
path = "src/main-mainnet.rs"
required-features = ["observer-mainnet"]
