[package]
name = "observer-common"
version = "0.1.0"
edition = "2021"

[dependencies]
observer-config = { path = "../observer-config" }
thiserror = "2.0.11"
alloy = { workspace = true, features = ["signer-mnemonic", "contract"] }
anyhow = "1.0"
serde_json = "1.0"

[features]
observer-localnet = ["observer-config/observer-localnet"]
observer-testnet = ["observer-config/observer-testnet"]
observer-mainnet = ["observer-config/observer-mainnet"]
